# proxy

./: .gitignore  Cargo.toml  README.md
contract/: Forc.toml
contract_v2/: Forc.toml
contract_v2/src/: main.sw
proxy/: Forc.toml
proxy/src/: main.sw
tests/contract/: mod.rs
tests/functions/: mod.rs  test_function.rs  upgrade.rs
