[package]
name = "proxy"
version = "0.1.0"
edition = "2021"
authors = ["atulpatare"]

[dev-dependencies]
fuels = { version = "0.31.1", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
